rct_tests/tests/ui/enum.rs
use rct::ToTable;

#[derive(ToTable)]
enum Tests {
    Value1,
    Value2,
}

fn main () {}